fix a z-index issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@ a, a:visited, a:hover, a:link{
   width: 100%;
   text-align: center;
   border-bottom: solid 1px;
+  z-index: 3;
   .site-nav{
     margin-top: 15px;
     li{
